# ios-cmake-tiny

./: CMakeLists.txt  README.md  ios.cmake  main.cpp
Resource/: test.txt
